--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@
   width: 960px;
   height: auto;
   min-height: 600px;
-  border: 1px solid red;
   margin: 0px auto;
 }
 
@@ -41,4 +40,75 @@
 .menu ul li a {
   color: #fff;
   text-decoration: none;
+}
+
+.info-wrapper {
+  width: 100%;
+  padding: 20px;
+  background: #cecece;
+  overflow: hidden;
+}
+
+.info-box {
+  width: 30%;
+  height: auto;
+  background: #fff;
+  float: left;
+  padding: 10px;
+  border: 1px solid #1b6eda;
+  border-radius: 10px;
+}
+
+.info-box h3 {
+  color: #1b6eda;
+  border-bottom: 1px dotted #1b6eda;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.info-box p {
+  line-height: 23px;
+  text-align: center;
+}
+
+.middle {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.footer,
+.content {
+  clear: both;
+}
+
+.content {
+  padding: 20px;
+  background: #299a8f;
+}
+
+.content h3 {
+  color: #fff;
+  border-bottom: 1px solid #fff;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.content p {
+  line-height: 23px;
+  text-align: justify;
+  color: #fff;
+}
+
+.footer {
+  width: 960px;
+  height: 50px;
+  margin: 0px auto;
+  background: #00695f;
+  text-align: center;
+  line-height: 50px;
+  color: #fff;
 }
